# python-parallel-processing-comparison

./: README.md  pyproject.toml
reports/001_overall/: report_20250326_221913.md
reports/002_ram/: report_20250326_182433.md
reports/003_gil/: report_20250326_182638.md
src/: 002_ram.py  003_gil.py
src/overall_bench/: common.py  data_processing.py  main.py  models.py  parallel_test.py  reporting.py  visualization.py
