[project]
name = "parallel_processing_benchmarking"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gitpython>=3.1.44",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "japanize-matplotlib>=1.1.3",
  "matplotlib>=3.10.1",
  "numpy>=2.1.1",
  "opencv-python>=4.10.0.84",
  "setuptools>=78.1.0",
]

[dependency-groups]
dev = ["ruff>=0.11.2"]
